# Bezgrow

./: .env.e2e.example  .env.example  .gitignore  CODEX_FINAL_RUN_GUARDRAILS.md  FINAL_BACKUP_AND_RECOVERY_NOTES.md  FINAL_PREPARATION_REPORT.md  FINAL_PRODUCTION_HARDENING_REPORT.md  FINAL_QA_CURRENT_BUGS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
app/: globals.css  home-client.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
components/: AppUpdateBanner.tsx  AppUpdatePrompt.tsx  AppUpdatesPanel.tsx  EntryCalculatorAnimation.tsx  PwaRegistration.tsx  ShippingLabel.tsx  chunk-reload-guard.tsx
desktop-shell/: index.html  startup-error.html
lib/: admin-access.ts  admin-role.ts  app-updates.ts  business-features.ts  features.ts  format.ts  get-organization-features.ts  getOrganization.ts  invoice-share.ts  pdf-invoice.ts  print-invoice-builder.ts  seo-pages.ts  supabase.ts  workspaceBootstrapClient.ts
public/: manifest.json  sw.js
pushker-dashboard/: index.html  package-lock.json  package.json
scripts/: build-desktop.mjs  build-next.mjs  generate-bezgrow-icons.mjs  generate-license-keys.mjs  preflight-final-hardening.mjs  prepare-desktop-build.mjs  test-api-route-coverage.mjs  (+9 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: delete_secret.toml  desktop_database_backup.toml  desktop_database_diagnostics.toml  desktop_startup_log.toml
src-tauri/src/: lib.rs  main.rs
(+164 files in other folders)
