[package]
name = "bezgrow-erp"
version = "0.1.0"
description = "Bezgrow ERP desktop shell"
authors = ["Bezgrow"]
edition = "2021"

[lib]
name = "bezgrow_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
